# dukenukem3d

./: .coveragerc  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DUKE3D.CFG  IMPLEMENTATION_PLAN.md  Makefile  NOTICE  README.md  SECURITY.md  app_icon.rc  build.mk  build_windows.bat  duke3d_launcher.bat  pytest.ini  requirements.txt
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  key-rotation.md
.github/agents/: README.md  asset-pipeline.agent.md  audio-engineer.agent.md  build-doctor.agent.md  build-system.agent.md  compat-engineer.agent.md  compat-layer.agent.md  documentation-curator.agent.md  engine-porter.agent.md  engine-surgeon.agent.md  network-multiplayer.agent.md  performance-profiler.agent.md  playtest-runner.agent.md  release-bundler.agent.md  security-and-secrets.agent.md  test-engineer.agent.md
.github/skills/audit-grind/: SKILL.md
.github/workflows/: build.yml  release.yml  secret-scan.yml
.smith/: project.yaml
.smith/specs/: 001-audio-sdl2-mixer.md  002-fix-long-to-int32.md  003-optimize-rendering.md  004-fix-grp-loading.md  005-add-compiler-optimizations.md  006-hud-rendering.md  007-multiplayer-tcp.md
SRC/: BSTUB.C  BUILD.C  BUILD.H  CACHE1D.C  ENGINE.C  GAME.C  MMULTI.C  PRAGMAS.H
compat/: README.md  SILENT_STUBS.md  a.c  audio_stub.c  audio_stub.h  compat.h  ctf.c  ctf.h  hud.c  hud.h  log_stub.h  mact_stub.c  maxtiles_engine_value.c  maxtiles_game_value.c  maxtiles_guard.c  msvc_unistd.h  net_socket.h  net_socket_posix.c  net_socket_win32.c  netdb.h  pragmas_gcc.h  sdl_driver.c  sdl_driver.h  sha256.c  sha256.h
docs/: ARCHITECTURE.md  GRP_DETERMINISM.md  LLM_PLAYTEST.md  asset_cache_invalidation.md
docs/archive/SRC/: BSTUB.C  README.md
docs/archive/compat/: README.md
docs/audits/: GRIND_LOG.md  RUN_allocache_race_cycle85.md  RUN_audio_callback_dispatch_cycle89.md  RUN_audio_schema_migration_plan_cycle85.md  RUN_engine_shift_overflow_cycle89.md  RUN_grp_crc_future_cycle87.md  RUN_lto_effectiveness_cycle86.md  RUN_menues_path_validation_cycle86.md  RUN_packet_loss_diagnostic_plan_cycle87.md  RUN_perf-slow-validation-cycle82.md  RUN_persona_refs_cycle86.md  RUN_player_trig_baseline_cycle87.md  RUN_rts_shared_opens_cycle88.md  RUN_xfail_disposition_cycle85.md  SUMMARY.md  asset-pipeline-r10.md  asset-pipeline-r11.md  asset-pipeline-r12.md  asset-pipeline-r13.md  asset-pipeline-r14.md  asset-pipeline-r15.md  asset-pipeline-r16.md  asset-pipeline-r17.md  asset-pipeline-r18.md  asset-pipeline-r19.md  asset-pipeline-r2.md  asset-pipeline-r20.md  asset-pipeline-r21.md  asset-pipeline-r22.md  asset-pipeline-r23.md  asset-pipeline-r24.md  asset-pipeline-r25.md  asset-pipeline-r26.md  asset-pipeline-r27.md  asset-pipeline-r28.md  asset-pipeline-r29.md  asset-pipeline-r3.md  asset-pipeline-r30.md  asset-pipeline-r4.md  asset-pipeline-r5.md  (+266 more)
docs/perf/: profiling_hooks_plan.md
extras/: SCRIPLIB.H
source/: ACTORS.C  ANIMLIB.C  BUILD.H  CONFIG.C  CONTROL.H  DUKE3D.H  FUNCT.H  FX_MAN.H  GAME.C  GAMEDEF.C  GLOBAL.C  KEYBOARD.H  MENUES.C  MUSIC.H  PLAYER.C  PRAGMAS.H  PREMAP.C  RTS.C  RTS.H  SCRIPLIB.H  SECTOR.C  SNDCARDS.H  SOUNDS.C  TASK_MAN.H  TYPES.H  UTIL_LIB.H  _animlib.h  _functio.h  _rts.h  animlib.h  build.h  config.h  control.h  develop.h  duke3d.h  file_lib.h  funct.h  function.h  fx_man.h  gamedefs.h  (+12 more)
testdata/: CTF1.MAP  GAME.CON  USER.CON
tests/: PARAMETRIZATION_CONTRACTS.md  README.md  conftest.py  test_allocache.py  test_anm_format.py  test_art_format.py  test_asset_retry_backoff.py  test_asset_validation.py  test_atomic_writes.py  test_audio_pipeline.py  test_audio_playback_roundtrip.py  test_binary_file_io.py  test_boss_damage_ramp.py  test_build_h_consistency.py  test_build_structs.py  test_build_warnings.py  test_check_secrets_r16_patterns.py  test_check_secrets_yaml_json_batch.py  test_compat_layer.py  test_compat_silent_stubs.py  test_con_single_source.py  test_crash_capture.py  test_credits_no_spoilers.py  test_ctf_analytics.py  test_ctf_cheat_lockout.py  test_ctf_codeexec.py  test_ctf_complete.py  test_ctf_events.py  test_ctf_events_schema.py  test_ctf_hud.py  test_ctf_validate.py  test_demo_format.py  test_engine_bounds_hardening.py  test_engine_net_hardening_regressions.py  test_env_parse_hardening.py  test_flag_format.py  test_flag_provenance.py  test_frame_analyzer.py  test_g1_seeded.py  test_g5_hint.py  (+52 more)
tools/: README.md  _asset_schemas.py  anm_format.py  art_format.py  audit_grp_tiles.py  bundle_windows.sh  check_secrets.sh  check_secrets_ci.sh  ctf_analytics.py  ctf_events_schema.py  ctf_validate.py  demo_format.py  e2e_solve_flags.py  e2e_windows_native.ps1  frame_analyzer.py  generate_assets.py  generate_audio.py  generate_ctf_map.py  generate_tables.py  get_sdl2_mingw.sh  grp_format.py  install_hooks.sh  llm_playtest.py  manifest_verification.py  map_format.py  midi_format.py  palette.py  release_notes.sh  repack_con.py  sast_scan.ps1  sound_manifest.py  tables.py  validate_generated_artifacts.py  voc_format.py  win_build.ps1
tools/ci/: generate_assets.sh
